# piDSC

./: altaz.py  debug_imager.py  imager.py  lx200Server.py  pidsc.py  plateSolver.py  position.py  pyproject.toml  readme.md  server.py  skyFiAutoDetect.py  solveResult.py  zwoImager.py  zwoimager.py
